# start-vm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  install.py  pyproject.toml  requirements.txt  start-vm.py  start_vm.py
default/: .SciTEUser.properties  .bashrc  .ghci  .gtkrc-2.0  .vimrc  .xinitrc  README.md
docs/: dotfiles_validation.md  recipe_schema.md
recipes/: arful-rlang.yml  artful-sumo.yml  artful.yml  base.yml  bionic.yml  bookworm.yml  bullseye-audio.yml  bullseye-ttplus.yml  buster-audio.yml  busterlite-pi4.yml  console.yml  disco-rlang.yml  disco.yml  focal.yml  macos.yml  patchbox.yml  prynth.yml  rlang-min.yml  rlang-tidy.yml  rlang.yml  sumo.yml  terminal_tedium.yml  ubuntu-17.10.yml  ubuntu-24.04-dev.yml  ubuntu-base.yml  ubuntu-dev.yml  ubuntu-pinned.yml  windows-pinned.yml  windows10.yml  windows11.yml
setup/: .ubuntu_20.04_test.sh.swp  darwin_macos_14.5_base.sh  debian_bookworm_bookworm.sh  debian_bullseye_prynth.sh  linux-debian-12-base.py  linux_debian_10_base.sh  linux_debian_12_base.py  linux_ubuntu_22.04_ubuntu-base.py  linux_ubuntu_22.04_ubuntu-base.sh  linux_ubuntu_22.04_ubuntu-dev.py  patchbox-20201123_patchbox.sh  raspbian_bullseye-audio.sh  raspbian_buster-audio.sh  raspbian_busterlite-pi4.sh  rpios_bullseye-ttplus.sh  ubuntu_16.04_base.sh  ubuntu_17.10_artful-sumo.sh  ubuntu_17.10_artful.sh  ubuntu_17.10_rlang.sh  ubuntu_17.10_sumo.sh  ubuntu_17.10_ubuntu-17.10.sh  ubuntu_19.04_disco-rlang.sh  ubuntu_19.04_disco.sh  ubuntu_19.10_test.sh  ubuntu_20.04_focal.sh  ubuntu_20.04_test.sh  (+1 more)
(+55 files in other folders)
